--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
+    "react-simple-image-slider": "^2.4.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.32"
   },
